Replace pnpm with npm for Glitch compatibility

--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
 		"workbox-build": "^7.0.0"
 	},
 	"engines": {
-		"node": "16.x",
-		"pnpm": ">=8"
+		"node": ">=16.x"
 	},
 	"glitch": {
 		"projectType": "generated_static"
