--- a/package.json
+++ b/package.json
@@ -1,26 +1,20 @@
 {
 	"private": true,
 	"devDependencies": {
-		"@guanghechen/rollup-plugin-copy": "^5.0.12",
-		"@rollup/plugin-node-resolve": "^15.2.3",
-		"@rollup/plugin-replace": "^5.0.5",
+		"@guanghechen/rollup-plugin-copy": "^6.0.8",
+		"@rollup/plugin-node-resolve": "^16.0.1",
+		"@rollup/plugin-replace": "^6.0.2",
 		"@rollup/plugin-terser": "^0.4.4",
-		"animejs": "^3.2.2",
-		"idb-keyval": "^6.2.1",
-		"rollup": "^3.29.4",
-		"workbox-build": "^7.0.0"
-	},
-	"engines": {
-		"node": ">=16.x"
-	},
-	"glitch": {
-		"projectType": "generated_static"
+		"animejs": "^4.1.2",
+		"idb-keyval": "^6.2.2",
+		"rollup": "^4.46.1",
+		"workbox-build": "^7.3.0"
 	},
 	"scripts": {
 		"home-build": "rollup --config --configSite=home",
 		"home-watch": "rollup --config --configSite=home --watch",
 		"itch-build": "rollup --config --configSite=itch",
-		"start": "npx concurrently -n rollup,server 'npm run build -- --watch' 'npx http-server build -c-1'",
-		"build": "rollup --config --configSite=glitch"
+		"start": "pnpx concurrently -n rollup,server \"pnpm run build --watch\" \"pnpx http-server build -c-1\"",
+		"build": "rollup --config --configSite=standalone"
 	}
 }
